--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -12,12 +12,12 @@
     "gridfs-stream": "^1.1.1",
     "helmet": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.11.2",
+    "mongoose": "^6.12.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "nodemon": "^3.0.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
