--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "install": "npm i react-redux @reduxjs/toolkit redux-persist react-dropzone dotenv formik yup react-router-dom@6 @mui/material @emotion/react @emotion/styled @mui/icons-material",
+    "build": "npm run install && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
